@startuml
title Diagrama de Classes - Locacao de Veiculos

'========================
'FORMATAÇÃO
'========================
'Se quiser que ela vá da esquerda pra direita na imagem final só tirar os ' '
left to right direction
'Pra ficar com + e - na imagem ao invés de quadrados'
skinparam classAttributeIconSize 0 

'========================
' ENUMS
'========================

class StatusVeiculo <<enumeration>> {
  Disponivel
  Reservado
  Alugado
  Manutencao
  Indisponivel
}

class StatusReserva <<enumeration>> {
  Confimarda
  Cancelada
  Retirada 
  Não Redirada
}

class StatusPagamento <<enumeration>> {
  Pendente
  Confirmado
  Estornado
}

class StatusLocacao <<enumeration>> {
  EmAndamento
  Finalizada
  Atrasada
  Cancelada
}

class TipoCargo <<enumeration>> {
  Atendente
  Vendedor
  Supervisor
  Gerente
}

'========================
' SUPERCLASSES
'========================
abstract class Pessoa {
  - id: UUID
  - nome: string
  - telefone: string
  - email: string
  - cep: int
  + atualizarContato(telefone, email)
}

'========================
' CLASSES
'========================
class Cliente {
  - cpf: string
  - cnh: string
  + alugarVeiculo(reservaId)
  + devolverVeiculo(locacaoId, kmFinal)
  + pagarReserva(Pagamento)
}

class Funcionario {
  - matricula: string
  - cargo: TipoCargo
  - salario: decimal
  + registrarLocacao(locacao:Locacao)
  + calcularSalario(): decimal
  + atualizarCargo(novoCargo)
}

class Veiculo {
  - id: UUID
  - placa: string
  - modelo: string
  - status: StatusVeiculo
  - kmAtual: int
  + atualizarStatus(novoStatus)
  + registrarManutencao(m:Manutencao)
  + disponivelParaReserva(dataInicio, dataFim): bool
  + incrementarQuilometragem(km: int)
}

class Reserva {
  - id: UUID
  - dataInicio: Date
  - dataFim: Date
  - status: StatusReserva
  + confirmar()
  + cancelar()
  + calcularValor(): decimal
  + gerarpagamento(): Pagamento
  + associarVeiculo(Veiculo)
}

class Locacao {
  - dataRetirada: DateTime
  - dataDevolucaoPrevista: DateTime
  - dataDevolucaoReal: DateTime [0..1]
  - kmRetirada: int
  - kmDevolucao: int 
  - status: StatusLocacao
  + emitirRecibo(): Recibo
  + iniciar(Funcionario)
  + encerrar(kmFinal:int, dataDevolucao:DateTime)
  + calcularCustoFinal(): decimal
}

class Pagamento {
  - id: UUID
  - tipo: TipoPagamento
  - valor: decimal
  - data: DateTime
  + processar()
  + confirmar()
  + estornar()
  + emitirRecibo():
}

class Manutencao {
  - id: UUID
  - descricao: string
  - data_inicio: Date
  - data_fim: Date
  - custo: decimal
  - status: StatusVeiculo
  + registrar()
  + concluir()
  + gerarRelatorio(): string
}

'========================
' HERANÇAS
'========================
Pessoa <|-- Cliente
Pessoa <|-- Funcionario

'========================
' COMPOSIÇÕES
'========================
Cliente "1" *-- "0..*" Reserva : faz
Reserva "1" *-- "0..1" Pagamento : possui
Reserva "1" *-- "1" Locacao : gera
Veiculo "1" *-- "0..*" Manutencao : recebe 


'========================
' ASSOCIAÇÕES
'========================
Reserva "1" -- "1" Veiculo : reserva de
Locacao "1" -- "1" Funcionario : registrada por
Locacao "1" -- "1" Veiculo : utiliza

'ALT + D"
@enduml
